<resources>
    <string name="app_name">KlashaAppToo</string>
    <string name="title_card">Card</string>
    <string name="title_bank">Bank</string>
    <string name="title_klasha_wallet">Klasha-Wallet</string>
    <string name="title_mobile_money">Mobile Money</string>
    <string name="title_mpesa">mpesa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country">Country</string>
    <string name="source_currency">Source currency</string>
    <string name="amount">Amount</string>
    <string name="phone">Phone</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="card_number">card number</string>
    <string name="cvv">cvv</string>
    <string name="mm">mm</string>
    <string name="yy">yy</string>
    <string name="pay">Pay</string>
    <string name="voucher">Voucher</string>
</resources>