<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.card.CardFragment">

    <include
        android:id="@+id/paymentLayout"
        layout="@layout/layout_payment"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="101dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCardNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintEnd_toStartOf="@+id/tilCvv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNumber"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCvv"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilCardNumber"
        app:layout_constraintEnd_toEndOf="@+id/paymentLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tilCardNumber"
        app:layout_constraintTop_toTopOf="@+id/tilCardNumber"
        app:layout_constraintWidth_percent="0.15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardCvv"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMonth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/tilCardNumber"
        app:layout_constraintTop_toBottomOf="@+id/tilCardNumber"
        app:layout_constraintWidth_percent="0.13">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvCardMonth"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:hint="@string/mm"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilYear"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tilMonth"
        app:layout_constraintStart_toEndOf="@+id/tilMonth"
        app:layout_constraintTop_toTopOf="@+id/tilMonth">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvCardYear"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:hint="@string/yy"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pay"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="24dp"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tilCvv"
        app:layout_constraintStart_toStartOf="@+id/tilCardNumber" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/paymentLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>